--- a/packages/ui/src/components/Header/Header.module.css
+++ b/packages/ui/src/components/Header/Header.module.css
@@ -32,10 +32,6 @@
     box-sizing: border-box;
   }
 
-  .bui-HeaderTop {
-    padding-top: var(--bui-space-6);
-  }
-
   .bui-HeaderStickySentinel {
     height: 1px;
     margin-bottom: -1px;
